--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
+        mavenCentral()
         jcenter()
+        google()
+        gradlePluginPortal()
+        maven{ url "https://maven.pkg.jetbrains.space/johnturkson/p/packages/maven"}
+        maven{ url "https://maven.pkg.jetbrains.space/public/p/compose/dev"}
     }
     dependencies {
         classpath('com.android.tools.build:gradle:7.0.0-alpha02')
@@ -13,12 +17,16 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         mavenCentral()
         jcenter()
-        maven { url "https://kotlin.bintray.com/kotlinx/" }
+        google()
         maven { url "https://dl.bintray.com/ekito/koin" }
         maven { url "https://dl.bintray.com/kodein-framework/Kodein-DB" }
-        maven { url 'https://jitpack.io' }
+        maven{ url "https://maven.pkg.jetbrains.space/johnturkson/p/packages/maven"}
+        maven{ url "https://maven.pkg.jetbrains.space/public/p/compose/dev"}
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
