--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,11 @@ buildscript {
         maven{ url "https://maven.pkg.jetbrains.space/public/p/compose/dev"}
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:7.0.0-alpha02')
+        classpath("com.android.tools.build:gradle:7.0.0-alpha02")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}")
         classpath("org.jetbrains.kotlin:kotlin-serialization:${Versions.kotlin}")
+        classpath("com.google.gms:google-services:4.3.3")
+        classpath("com.google.firebase:firebase-crashlytics-gradle:2.3.0")
     }
 }
 
