--- a/app/mobile/src/main/AndroidManifest.xml
+++ b/app/mobile/src/main/AndroidManifest.xml
@@ -13,5 +13,6 @@
     </dist:module>
     <application>
         <activity android:name=".ui.instance.InstanceActivity" />
+        <activity android:name=".ui.main.MainActivity" />
     </application>
 </manifest>
