--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         mavenCentral()
         jcenter()
         google()
+        maven{ url 'https://jitpack.io' }
         maven{ url "https://kotlin.bintray.com/kotlinx/"}
         maven{ url "https://dl.bintray.com/ekito/koin" }
         maven{ url "https://dl.bintray.com/kodein-framework/Kodein-DB" }
