--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,11 @@ dependencies {
     implementation(Compose.navigation)
     implementation(Compose.accompanist)
 
+    // Paging
+    implementation("androidx.paging:paging-runtime-ktx:3.0.0-alpha11")
+    implementation("androidx.paging:paging-common-ktx:3.0.0-alpha11")
+    implementation("androidx.paging:paging-compose:1.0.0-alpha04")
+
     // Koin
     implementation(Koin.android)
     implementation(Koin.androidViewModel)
