--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ android {
 dependencies {
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     // Internal
     implementation(project(":common"))
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2")
@@ -84,6 +85,9 @@ dependencies {
     implementation("androidx.paging:paging-runtime-ktx:3.0.0-alpha11")
     implementation("androidx.paging:paging-common-ktx:3.0.0-alpha11")
     implementation("androidx.paging:paging-compose:1.0.0-alpha04")
+
+    // ExoPlayer
+    implementation(ExternalLibs.exoPlayer)
 
     // Koin
     implementation(Koin.android)
