--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,11 @@ buildscript {
         maven{ url "https://maven.pkg.jetbrains.space/public/p/compose/dev"}
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:7.0.0-alpha03")
+        classpath('com.android.tools.build:gradle:7.0.0-alpha07')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}")
         classpath("org.jetbrains.kotlin:kotlin-serialization:${Versions.kotlin}")
-        classpath("com.google.gms:google-services:4.3.4")
-        classpath("com.google.firebase:firebase-crashlytics-gradle:2.4.1")
+        classpath("com.google.gms:google-services:4.3.5")
+        classpath("com.google.firebase:firebase-crashlytics-gradle:2.5.0")
     }
 }
 
