--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.deepanshut041.peertube">
-    <uses-feature
-        android:name="android.software.leanback"
-        android:required="false" />
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
+<!--    <uses-feature-->
+<!--        android:name="android.software.leanback"-->
+<!--        android:required="false" />-->
+<!--    <uses-feature-->
+<!--    -->
+<!--        android:name="android.hardware.touchscreen"-->
+<!--        android:required="false" />-->
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.deepanshut041.peertube.App"
         android:allowBackup="true"
-        android:banner="@drawable/banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -34,14 +34,14 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.deepanshut041.peertube.ui.tv.TvActivity"
-            android:theme="@style/TvSplashScreenTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--        <activity-->
+<!--            android:name="com.deepanshut041.peertube.ui.tv.TvActivity"-->
+<!--            android:theme="@style/TvSplashScreenTheme">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
     </application>
 
