--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2")
 
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha02'
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha04'
 
     // JetPack
     implementation(JetpackLibs.appCompat)
@@ -69,7 +69,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-extensions:2.2.0")
     implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.3.0')
     implementation("androidx.preference:preference-ktx:1.1.1")
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha03"
 
     // Compose
     implementation(Compose.ui)
@@ -84,16 +84,17 @@ dependencies {
     implementation(Compose.accompanist)
 
     // Paging
-    implementation("androidx.paging:paging-runtime-ktx:3.0.0-beta01")
-    implementation("androidx.paging:paging-common-ktx:3.0.0-beta01")
-    implementation("androidx.paging:paging-compose:1.0.0-alpha07")
+    implementation("androidx.paging:paging-runtime-ktx:3.0.0-beta02")
+    implementation("androidx.paging:paging-common-ktx:3.0.0-beta02")
+    implementation("androidx.paging:paging-compose:1.0.0-alpha08")
 
     // ExoPlayer
     implementation(ExternalLibs.exoPlayer)
 
     // Koin
     implementation(Koin.android)
-    implementation(Koin.androidViewModel)
+    implementation(Koin.compose)
+    implementation(Koin.androidExt)
 
     // Glide
     implementation(ExternalLibs.glide)
