--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
+apply plugin: "kotlin-android-extensions"
 apply plugin: "com.google.gms.google-services"
 apply plugin: "com.google.firebase.crashlytics"
 
@@ -70,6 +71,7 @@ dependencies {
     implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.3.1')
     implementation("androidx.preference:preference-ktx:1.1.1")
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha04"
+    implementation 'androidx.core:core-ktx:1.6.0-alpha03'
 
     // Compose
     implementation(Compose.ui)
@@ -84,8 +86,8 @@ dependencies {
     implementation(Compose.accompanist)
 
     // Paging
-    implementation('androidx.paging:paging-runtime-ktx:3.0.0-rc01')
-    implementation("androidx.paging:paging-common-ktx:3.0.0-rc01")
+    implementation('androidx.paging:paging-runtime-ktx:3.0.0')
+    implementation("androidx.paging:paging-common-ktx:3.0.0")
     implementation("androidx.paging:paging-compose:1.0.0-alpha08")
 
     // ExoPlayer
@@ -109,6 +111,6 @@ dependencies {
     implementation("com.mikepenz:community-material-typeface:5.8.55.0-kotlin@aar")
 
     // Test
-    testImplementation("junit:junit:4.13")
+    testImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test:runner:1.3.0")
 }
